--- a/CSS2/ej04/assets/css/main.css
+++ b/CSS2/ej04/assets/css/main.css
@@ -57,3 +57,53 @@ se esta haciendo un hover*/
 		
 
 }
+
+.submenu li {
+	border: 1px solid #ccc;
+	padding: 0.5em;
+}
+
+
+
+
+
+.submenu {
+
+	display: none;
+	position: absolute;
+	border: 1px solid #ccc;
+	top: 100%;
+	left: -1px;
+	width: 200%;
+
+
+
+}
+
+
+.submenu li {
+
+		position: relative;
+}
+
+.submenu >li:hover .azpisubmenu
+{
+		display: block;
+		
+}
+
+
+
+
+.azpisubmenu {
+
+	display: none;
+	position: absolute;
+	border: 1px solid #ccc;
+	top: -1px;
+	left: 100%;
+	width: 200%;
+
+
+
+}
