--- a/CSS2/ej05/assets/css/main.css
+++ b/CSS2/ej05/assets/css/main.css
@@ -170,6 +170,9 @@ table{
 
 	border-left: 3px solid #ccc;
 	border-right: 3px solid #ccc;
+	width: 100%;
+	border-collapse: collapse;
+	padding: 1em;
 }
 
 
@@ -182,13 +185,40 @@ tfoot, thead {
 tfoot, thead th {
 
 	padding: 1em;
+
 }
 
- tbody tr {
+ tbody td {
 
  	border-bottom: 1px solid #ccc;
  }
 
+ tfoot td {
+
+ 	text-align: right;
+ 	font-weight: bold;
+ }
+
+ thead {
+
+ 	text-align: left;
+
+
+ }
+ tbody td {
+ 	padding-left: 1em;
+ }
+
+
+ .ancho {
+
+ 	width:10%;
+ }
+
+.txt-right {
+	text-align: right;
+	padding-right: 1em;
+}
 
 
 .time {
