--- a/CSS3/ej06/assets/css/main.css
+++ b/CSS3/ej06/assets/css/main.css
@@ -22,6 +22,7 @@ body {
    text-align: center;
    box-shadow: 1px 1px 2px #e6e6e6;
    cursor: pointer;
+   
 }
 .view .mask, .view .content {
    width: 300px;
@@ -30,6 +31,7 @@ body {
    overflow: hidden;
    top: 0px;
    left: 0px;
+
    
 }
 .view .mask {
@@ -39,7 +41,8 @@ body {
    display: block;
    position: relative;
    width: 300px;
-   opacity:1;
+   transition:transform 0.3s linear 0.1s;
+   
 }
 .view h2 {
    text-transform: uppercase;
@@ -49,8 +52,8 @@ body {
    font-size: 17px;
    padding: 10px;
    background: rgba(0, 0, 0, 0.8);
-   margin: 20px 0 0 0;
-   transform: translateX(-400px);
+   bottom:50px;
+   transition:bottom 0.3s linear 0.1s;
 }
 .view p {
    font-family: Georgia, serif;
@@ -60,7 +63,8 @@ body {
    color: #fff;
    padding: 10px;
    text-align: center;
-   transform: translateY(800px);
+   top:120px;
+   transition:top 0.5s linear 0.1s;
 }
 
 .view a.info {
@@ -70,38 +74,38 @@ body {
    background: #000;
    color: #fff;
    text-transform: uppercase;
-   box-shadow: 0 0 1px #000;
-   transform: translate(-400px,-400px);
+   opacity:0;
+   transition:opacity 0.5s linear 0.1s;
 }
 
 .view a.info: hover {
    box-shadow: 0 0 5px #000;
-   transform: translate(-400px,-400px);
 }
 
 /* ANIMACIONES Y TRANSICIONES */
 
-.view:hover >img {
-   display: block;
-   position: relative;
-   width: 300px;
-   transform: scale(1.25);
-   transition: transform 2s;
-
+.view .mask{
+    visibility:hidden;
+    transition:background-color 0.3s linear 0.1s;
 }
 
-.view:hover .mask {
-
-  background-color: rgba(219,127,8, 0.7);
+.view:hover .mask{
+    visibility:visible;
+    background-color: rgba(219,127,8, 0.7);
 }
 
-.view:hover .mask  h2{
-
-    transform: translateX(50px);
+.view:hover img{
+    transform: scale(2);
 }
 
-.view:hover .mask  p{
+.view:hover a{
+  opacity:1;
+}
 
-    transform: translateX(10px);
-    
+.view:hover p{
+  top:0px;
+}
+
+.view:hover h2{
+  bottom:0px;
 }
