--- a/CSS3/ej06/assets/css/main.css
+++ b/CSS3/ej06/assets/css/main.css
@@ -41,7 +41,7 @@ body {
    display: block;
    position: relative;
    width: 300px;
-   transition:transform 0.3s linear 0.1s;
+   transition:transform 0.3s linear;
    
 }
 .view h2 {
@@ -52,8 +52,8 @@ body {
    font-size: 17px;
    padding: 10px;
    background: rgba(0, 0, 0, 0.8);
-   bottom:50px;
-   transition:bottom 0.3s linear 0.1s;
+   transform: translateY(-150px);
+   transition:transform 0.3s linear;
 }
 .view p {
    font-family: Georgia, serif;
@@ -63,8 +63,8 @@ body {
    color: #fff;
    padding: 10px;
    text-align: center;
-   top:120px;
-   transition:top 0.5s linear 0.1s;
+   transform: translateY(200px);
+   transition:transform 0.5s linear;
 }
 
 .view a.info {
@@ -75,7 +75,7 @@ body {
    color: #fff;
    text-transform: uppercase;
    opacity:0;
-   transition:opacity 0.5s linear 0.1s;
+   transition:opacity 0.5s linear;
 }
 
 .view a.info: hover {
@@ -84,13 +84,11 @@ body {
 
 /* ANIMACIONES Y TRANSICIONES */
 
-.view .mask{
-    visibility:hidden;
-    transition:background-color 0.3s linear 0.1s;
+.view .mask{  
+    transition:background-color 0.3s linear;
 }
 
 .view:hover .mask{
-    visibility:visible;
     background-color: rgba(219,127,8, 0.7);
 }
 
@@ -103,9 +101,9 @@ body {
 }
 
 .view:hover p{
-  top:0px;
+  transform: translateY(0px);
 }
 
 .view:hover h2{
-  bottom:0px;
+  transform: translateY(0px);
 }
