--- a/CSS3/ej07/assets/css/main.css
+++ b/CSS3/ej07/assets/css/main.css
@@ -5,7 +5,7 @@
     margin: 5em;
 }
 
-#clock {
+.clock {
     position: relative;
     width: 378px;
     height: 378px;
@@ -14,34 +14,34 @@
     margin: 5em 0 0 -189px;
 }
 
-#clock div {
+.clock div {
     position: absolute;
 }
 
 
-#hour img {
+.hour img {
 
     animation-name: hora;
-    animation-duration:10s/*21600s*/;
+    animation-duration:43200s;
     animation-iteration-count: infinite;
-    animation-timing-function: steps(60);
+    animation-timing-function: linear;
 }
 
 
 
-#minute img {
+.minute img {
 
     animation-name: hora;
-    animation-duration:60s/*3600s*/;
+    animation-duration:3600s;
     animation-iteration-count: infinite;
-    animation-timing-function: steps(60);
+    animation-timing-function: linear;
 }
 
 
-#second img {
+.second img {
 
     animation-name: hora;
-    animation-duration:1s/*60s*/;
+    animation-duration:60s;
     animation-iteration-count: infinite;
     animation-timing-function: steps(60);
 }
@@ -50,7 +50,7 @@
 @keyframes hora {
 
     from {
-            transform: rotate(0 deg);
+            transform: rotate(0deg);
             
     }
 
